Changed the startup of the program and added a headerfile for external resources

--- a/findetKevin/SDL2_Spiel/SDL2_Spiel.vcxproj
+++ b/findetKevin/SDL2_Spiel/SDL2_Spiel.vcxproj
@@ -160,6 +160,7 @@
     <ClInclude Include="CEntity.h" />
     <ClInclude Include="CGamemaster.h" />
     <ClInclude Include="CPlayer.h" />
+    <ClInclude Include="Resources.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
