--- a/findetKevin/SDL2_Spiel/SDL2_Spiel.vcxproj.filters
+++ b/findetKevin/SDL2_Spiel/SDL2_Spiel.vcxproj.filters
@@ -38,5 +38,8 @@
     <ClInclude Include="CPlayer.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
+    <ClInclude Include="Resources.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
