--- a/findetKevin/SDL2_Spiel/SDL2_Spiel.vcxproj
+++ b/findetKevin/SDL2_Spiel/SDL2_Spiel.vcxproj
@@ -153,12 +153,14 @@
   <ItemGroup>
     <ClCompile Include="CEntity.cpp" />
     <ClCompile Include="CGamemaster.cpp" />
+    <ClCompile Include="CMap.cpp" />
     <ClCompile Include="CPlayer.cpp" />
     <ClCompile Include="Quelle.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CEntity.h" />
     <ClInclude Include="CGamemaster.h" />
+    <ClInclude Include="CMap.h" />
     <ClInclude Include="CPlayer.h" />
     <ClInclude Include="Resources.h" />
   </ItemGroup>
