--- a/findetKevin/SDL2_Spiel/SDL2_Spiel.vcxproj.filters
+++ b/findetKevin/SDL2_Spiel/SDL2_Spiel.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="CPlayer.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
+    <ClCompile Include="CMap.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CGamemaster.h">
@@ -39,6 +42,9 @@
       <Filter>Headerdateien</Filter>
     </ClInclude>
     <ClInclude Include="Resources.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
+    <ClInclude Include="CMap.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
   </ItemGroup>
