--- a/findetKevin/SDL2_Spiel/SDL2_Spiel.vcxproj
+++ b/findetKevin/SDL2_Spiel/SDL2_Spiel.vcxproj
@@ -157,6 +157,7 @@
     <ClCompile Include="CMap.cpp" />
     <ClCompile Include="CMapEntity.cpp" />
     <ClCompile Include="CPlayer.cpp" />
+    <ClCompile Include="CSavefile.cpp" />
     <ClCompile Include="Quelle.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -166,6 +167,7 @@
     <ClInclude Include="CMap.h" />
     <ClInclude Include="CMapEntity.h" />
     <ClInclude Include="CPlayer.h" />
+    <ClInclude Include="CSavefile.h" />
     <ClInclude Include="Resources.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
