--- a/findetKevin/SDL2_Spiel/SDL2_Spiel.vcxproj.filters
+++ b/findetKevin/SDL2_Spiel/SDL2_Spiel.vcxproj.filters
@@ -39,6 +39,15 @@
     <ClCompile Include="CSavefile.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
+    <ClCompile Include="IKGameLogic.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
+    <ClCompile Include="IKPlayer.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
+    <ClCompile Include="IKMap.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CGamemaster.h">
@@ -63,6 +72,15 @@
       <Filter>Headerdateien</Filter>
     </ClInclude>
     <ClInclude Include="CSavefile.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
+    <ClInclude Include="IKGameLogic.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
+    <ClInclude Include="IKPlayer.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
+    <ClInclude Include="IKMap.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
   </ItemGroup>
