--- a/findetKevin/SDL2_Spiel/SDL2_Spiel.vcxproj
+++ b/findetKevin/SDL2_Spiel/SDL2_Spiel.vcxproj
@@ -156,6 +156,7 @@
     <ClCompile Include="CGamemaster.cpp" />
     <ClCompile Include="CMap.cpp" />
     <ClCompile Include="CMapEntity.cpp" />
+    <ClCompile Include="CNPC.cpp" />
     <ClCompile Include="CPlayer.cpp" />
     <ClCompile Include="CSavefile.cpp" />
     <ClCompile Include="IKGameLogic.cpp" />
@@ -169,6 +170,7 @@
     <ClInclude Include="CGamemaster.h" />
     <ClInclude Include="CMap.h" />
     <ClInclude Include="CMapEntity.h" />
+    <ClInclude Include="CNPC.h" />
     <ClInclude Include="CPlayer.h" />
     <ClInclude Include="CSavefile.h" />
     <ClInclude Include="IKGameLogic.h" />
