--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,6 @@
 findetKevin/SDL2_Spiel/SDL2_Spiel.vcxproj
 findetKevin/SDL2_Spiel/SDL2_Spiel.vcxproj.filters
 findetKevin/SDL2_Spiel/x64/Debug/SDL2_Spiel.log
+findetKevin/SDL2_Spiel/x64/Debug/SDL2_Spiel.log
+findetKevin/SDL2_Spiel/x64/
+findetKevin/SDL2_Spiel/Debug/
