--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ findetKevin/SDL2_Spiel/x64/Debug/SDL2_Spiel.log
 findetKevin/SDL2_Spiel/Debug/
 findetKevin/x64/
 findetKevin/.vs/
+findetKevin/.vs/SDL2_Spiel/v16/.suo
