--- a/findetKevin/SDL2_Spiel/SDL2_Spiel.vcxproj.filters
+++ b/findetKevin/SDL2_Spiel/SDL2_Spiel.vcxproj.filters
@@ -46,6 +46,10 @@
     <ClCompile Include="CCoin.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="CJohn.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="CQuestTrigger.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Resources.h">
@@ -93,6 +97,10 @@
     <ClInclude Include="CCoin.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="CJohn.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="CQuestTrigger.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Source Files">
