--- a/findetKevin/SDL2_Spiel/SDL2_Spiel.vcxproj
+++ b/findetKevin/SDL2_Spiel/SDL2_Spiel.vcxproj
@@ -88,12 +88,12 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>C:\workspaces\GitHub repos\FindetKevin_OpenGl\findetKevin\libs\box2d\include;$(SolutionDir)libs\SDL2_ttf\include;$(SolutionDir)libs\SDL2-2.0.20\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)libs\box2d\include;$(SolutionDir)libs\SDL2_ttf\include;$(SolutionDir)libs\SDL2-2.0.20\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>C:\workspaces\GitHub repos\FindetKevin_OpenGl\findetKevin\libs\box2d\lib;$(SolutionDir)libs\SDL2_ttf\lib;$(SolutionDir)libs\SDL2-2.0.20\lib\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(SolutionDir)libs\box2d\lib;$(SolutionDir)libs\SDL2_ttf\lib;$(SolutionDir)libs\SDL2-2.0.20\lib\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>SDL2.lib;SDL2main.lib;libfreetype-6.lib;libharfbuzz-0.lib;SDL2_ttf.lib;box2d.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
@@ -105,14 +105,14 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>C:\workspaces\GitHub repos\FindetKevin_OpenGl\findetKevin\libs\box2d\include;$(SolutionDir)libs\SDL2_ttf\include;$(SolutionDir)libs\SDL2-2.0.20\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)libs\box2d\include;$(SolutionDir)libs\SDL2_ttf\include;$(SolutionDir)libs\SDL2-2.0.20\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>C:\workspaces\GitHub repos\FindetKevin_OpenGl\findetKevin\libs\box2d\lib;$(SolutionDir)libs\SDL2_ttf\lib;$(SolutionDir)libs\SDL2-2.0.20\lib\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(SolutionDir)libs\box2d\lib;$(SolutionDir)libs\SDL2_ttf\lib;$(SolutionDir)libs\SDL2-2.0.20\lib\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>SDL2.lib;SDL2main.lib;libfreetype-6.lib;libharfbuzz-0.lib;SDL2_ttf.lib;box2d.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
@@ -122,12 +122,12 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>C:\workspaces\GitHub repos\FindetKevin_OpenGl\findetKevin\libs\box2d\include;$(SolutionDir)libs\SDL2_ttf\include;$(SolutionDir)libs\SDL2-2.0.20\include;$(SolutionDir)libs\SDL2_image-2.0.5\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)libs\box2d\include;$(SolutionDir)libs\SDL2_ttf\include;$(SolutionDir)libs\SDL2-2.0.20\include;$(SolutionDir)libs\SDL2_image-2.0.5\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>C:\workspaces\GitHub repos\FindetKevin_OpenGl\findetKevin\libs\box2d\lib;$(SolutionDir)libs\SDL2_ttf\lib;$(SolutionDir)libs\SDL2-2.0.20\lib\x64;$(SolutionDir)libs\SDL2_image-2.0.5\lib\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(SolutionDir)libs\box2d\lib;$(SolutionDir)libs\SDL2_ttf\lib;$(SolutionDir)libs\SDL2-2.0.20\lib\x64;$(SolutionDir)libs\SDL2_image-2.0.5\lib\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>SDL2.lib;SDL2main.lib;libfreetype-6.lib;libharfbuzz-0.lib;SDL2_ttf.lib;box2d.lib;SDL2_image.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
@@ -139,14 +139,14 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>C:\workspaces\GitHub repos\FindetKevin_OpenGl\findetKevin\libs\box2d\include;$(SolutionDir)libs\SDL2_ttf\include;$(SolutionDir)libs\SDL2-2.0.20\include;$(SolutionDir)libs\SDL2_image-2.0.5\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)libs\box2d\include;$(SolutionDir)libs\SDL2_ttf\include;$(SolutionDir)libs\SDL2-2.0.20\include;$(SolutionDir)libs\SDL2_image-2.0.5\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>C:\workspaces\GitHub repos\FindetKevin_OpenGl\findetKevin\libs\box2d\lib;$(SolutionDir)libs\SDL2_ttf\lib;$(SolutionDir)libs\SDL2-2.0.20\lib\x64;$(SolutionDir)libs\SDL2_image-2.0.5\lib\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(SolutionDir)libs\box2d\lib;$(SolutionDir)libs\SDL2_ttf\lib;$(SolutionDir)libs\SDL2-2.0.20\lib\x64;$(SolutionDir)libs\SDL2_image-2.0.5\lib\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>SDL2.lib;SDL2main.lib;libfreetype-6.lib;libharfbuzz-0.lib;SDL2_ttf.lib;box2d.lib;SDL2_image.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
