--- a/findetKevin/SDL2_Spiel/SDL2_Spiel.vcxproj
+++ b/findetKevin/SDL2_Spiel/SDL2_Spiel.vcxproj
@@ -93,7 +93,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>$(SolutionDir)libs\box2d\lib;$(SolutionDir)libs\SDL2_ttf\lib;$(SolutionDir)libs\SDL2-2.0.20\lib\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(SolutionDir)libs\box2d\lib\Debug;$(SolutionDir)libs\SDL2_ttf\lib;$(SolutionDir)libs\SDL2-2.0.20\lib\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>SDL2.lib;SDL2main.lib;libfreetype-6.lib;libharfbuzz-0.lib;SDL2_ttf.lib;box2d.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
@@ -112,7 +112,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>$(SolutionDir)libs\box2d\lib;$(SolutionDir)libs\SDL2_ttf\lib;$(SolutionDir)libs\SDL2-2.0.20\lib\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(SolutionDir)libs\box2d\lib\Release;$(SolutionDir)libs\SDL2_ttf\lib;$(SolutionDir)libs\SDL2-2.0.20\lib\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>SDL2.lib;SDL2main.lib;libfreetype-6.lib;libharfbuzz-0.lib;SDL2_ttf.lib;box2d.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
@@ -127,7 +127,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>$(SolutionDir)libs\box2d\lib;$(SolutionDir)libs\SDL2_ttf\lib;$(SolutionDir)libs\SDL2-2.0.20\lib\x64;$(SolutionDir)libs\SDL2_image-2.0.5\lib\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(SolutionDir)libs\box2d\lib\Debug;$(SolutionDir)libs\SDL2_ttf\lib;$(SolutionDir)libs\SDL2-2.0.20\lib\x64;$(SolutionDir)libs\SDL2_image-2.0.5\lib\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>SDL2.lib;SDL2main.lib;libfreetype-6.lib;libharfbuzz-0.lib;SDL2_ttf.lib;box2d.lib;SDL2_image.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
@@ -146,7 +146,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>$(SolutionDir)libs\box2d\lib;$(SolutionDir)libs\SDL2_ttf\lib;$(SolutionDir)libs\SDL2-2.0.20\lib\x64;$(SolutionDir)libs\SDL2_image-2.0.5\lib\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(SolutionDir)libs\box2d\lib\Release;$(SolutionDir)libs\SDL2_ttf\lib;$(SolutionDir)libs\SDL2-2.0.20\lib\x64;$(SolutionDir)libs\SDL2_image-2.0.5\lib\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>SDL2.lib;SDL2main.lib;libfreetype-6.lib;libharfbuzz-0.lib;SDL2_ttf.lib;box2d.lib;SDL2_image.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
@@ -168,6 +168,7 @@
     <ClCompile Include="IKMap.cpp" />
     <ClCompile Include="IKPlayer.cpp" />
     <ClCompile Include="IKRenderLayer.cpp" />
+    <ClCompile Include="Projectile.cpp" />
     <ClCompile Include="Quelle.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -189,6 +190,7 @@
     <ClInclude Include="IKMap.h" />
     <ClInclude Include="IKPlayer.h" />
     <ClInclude Include="IKRenderLayer.h" />
+    <ClInclude Include="Projectile.h" />
     <ClInclude Include="Resources.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
