--- a/findetKevin/SDL2_Spiel/SDL2_Spiel.vcxproj.filters
+++ b/findetKevin/SDL2_Spiel/SDL2_Spiel.vcxproj.filters
@@ -58,6 +58,9 @@
     <ClCompile Include="Projectile.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="CKevin.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Resources.h">
@@ -118,6 +121,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Projectile.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="CKevin.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
