--- a/findetKevin/SDL2_Spiel/SDL2_Spiel.vcxproj.filters
+++ b/findetKevin/SDL2_Spiel/SDL2_Spiel.vcxproj.filters
@@ -61,6 +61,9 @@
     <ClCompile Include="CKevin.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="IKVirus.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Resources.h">
@@ -124,6 +127,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="CKevin.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="IKVirus.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
